--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,11 @@ name:   Dan Donahue
 limit_posts:	0
 pygments:	true
 
+paginate:	5
+paginate_path:	"page/:num"
+
+excerpt_separator:      "\n\n"
+
 markdown:	redcarpet
 markdown_ext:	markdown,mkd,mkdn,md
 
