--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Dan Donahue - Journeyman
 locale:           en_US
-url: #http://dandonahue.net
+url:              http://dandonahue.net
 
 
 # Jekyll configuration
