Google Analytics change

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
   facebook: #username
   google:
     plus: #username
-    analytics: 45243911
+    analytics: UA-45243911-1
     verify:
     ad-client:
     ad-slot:
