Adds an underline to the currently active top navigation item.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,13 @@
 
 - title: About
   url: /about/
+  category: about
 
 - title: Professional Musings
   url: /professional/
+  category: professional
 
 - title: Personal Musings
   url: /personal/
+  category: personal
+
