--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:              http://dandonahue.net
 
 permalink:   date
 markdown:    kramdown
-highlighter: pygments
+highlighter: rouge
 sass:
   sass_dir: _sass
   style: compressed
