Adds Havens bandcamp page

--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,7 @@ owner:
   dribbble: #username
   youtube: #username
   soundcloud: deathmetaldan
+  bandcamp: havens
   bandcamp: wilderhost
   weibo: #username
   flickr: #username
