Removes Soundcloud profile

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ owner:
   steam: #username
   dribbble: #username
   youtube: #username
-  soundcloud: deathmetaldan
+  soundcloud: #deathmetaldan
   bandcamp:
     havens: havens
     wilderhost: wilderhost
