Updates author bio to include LinkedIn profile

--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ owner:
   bing-verify:
   github: ddonahue
   stackoverflow: 240908/dan
-  linkedin: #username
+  linkedin: dandonahue215
   xing: #username
   instagram: #username
   lastfm: deathmetaldan
