Remove outdated social media accounts

--- a/_config.yml
+++ b/_config.yml
@@ -45,14 +45,14 @@ owner:
   linkedin: dandonahue215
   xing: #username
   instagram: #username
-  lastfm: deathmetaldan
+  lastfm: #username
   tumblr: #username
   pinterest: #username
   foursquare: #username
   steam: #username
   dribbble: #username
   youtube: #username
-  soundcloud: #deathmetaldan
+  soundcloud: #username
   bandcamp:
     havens: havens
     wilderhost: wilderhost
