--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ owner:
   avatar: http://www.gravatar.com/avatar/6dfa02b4173a9f663063ffa914ca0de5.png?size=160
   bio: "Musician. Traveler. Programmer."
   email: 
-  #disqus-shortname: dandonahue
-  twitter: deathmetaldan13
+  disqus-shortname: dandonahue
+  twitter: #deathmetaldan13
   facebook: #username
   google:
     plus: #username
